added extra section

--- a/index.html
+++ b/index.html
@@ -157,19 +157,32 @@
     </section>
     <!-- Section : Facts end -->
 
+    <!-- Bonus Section : Call to action start -->
+
+    <section class="cta">
+      <div class="cta_content container">
+        <h1>Let's <span>Talk</span></h1>
+        <p>We would love to hear from you!</p>
+        <button>Drop Us A Line</button>
+      </div>
+    </section>
+
+    <!-- Bonus Section : Call to action end -->
+
     <!-- Section : Sponsors Start -->
     <section class="sponsors container">
       <h2>Our Sponsors</h2>
       <p>
-        There are many variations of passages of Lorem Ipsum available, but <br> the
-        majority have suffered alteration.
+        There are many variations of passages of Lorem Ipsum available, but
+        <br />
+        the majority have suffered alteration.
       </p>
       <div class="companys">
-        <img src="images/sponsors/spotify.png" alt="">
-        <img src="images/sponsors/amazon.png" alt="">
-        <img src="images/sponsors/google.png" alt="">
-        <img src="images/sponsors/telerama.png" alt="">
-        <img src="images/sponsors/figma.png" alt="">
+        <img src="images/sponsors/spotify.png" alt="" />
+        <img src="images/sponsors/amazon.png" alt="" />
+        <img src="images/sponsors/google.png" alt="" />
+        <img src="images/sponsors/telerama.png" alt="" />
+        <img src="images/sponsors/figma.png" alt="" />
       </div>
     </section>
 
@@ -177,9 +190,9 @@
 
     <!-- Footer Start -->
     <footer>
-        <div class="container">
-            <p>All rights reserved copyright 2023 Abir Khan</p>
-        </div>
+      <div class="container">
+        <p>All rights reserved copyright 2023 Abir Khan</p>
+      </div>
     </footer>
     <!-- Footer End -->
   </body>
